# sentra

./: README.md  package.xml  setup.cfg  setup.py
config/: mprocs.yml  params.yml
docker/: Dockerfile  README.md  docker-compose.yml
launch/: sentra.launch.py
sentra_ros/: requirements.txt  sentra.py
sentra_ros/core/: embedding.py  gui.py  utils.py
